2018-07-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfont.c (grGotobitmap): Initialize color here...
	(grWrite): ... instead of here.

2018-07-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Implement waterfall as mode 2.

	* src/ftstring.c (Render_String, Render_KernCmp): Extracted from ...
	(main): ... here.
	(Render_Waterfall): New mode function based on ftview.
	(event_help): Updated.

2018-07-03  Werner Lemberg  <wl@gnu.org>

	Fix some clang warnings.

	* graph/grfill.c (grFillRect): Use `int' for `size'.

	* src/ftstring.c (flower_init): Use `unsigned int' for `i'.
	Simplify some loops.

	* src/ftview.c (parse_cmdline) <'L'>: Use `unsigned char' casts.
	(main): Add `FT_LcdFilter' cast.

2018-07-02  Hugh McMaster  <hugh.mcmaster@outlook.com>

	Fix memory leak (patch #9666).

	* src/ftcommon.c (FTDemo_Install_Font): Always free
	`font->filepathname'.

2018-07-02  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_All): Update `FT_Get_Color_Glyph_Layer' call.

	The function's signature was changed on 2018-07-02.

2018-06-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Implement string shifts.

	* src/ftstring.c (event_center_change): New function.
	(Process_Event): Shift the string with left-right arrows, rotate it
	with F5-F6.
	(event_help): Document it.

2018-06-30  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Get_Index): Handle `FT_ENCODING_ORDER'.

	* src/ftcommon.c (FTDemo_Draw_Header, FTDemo_String_Set),
	src/ftview.c (Render_{All,Stroke,Fancy}),
	src/ftgrid.c (grid_status_draw_outline): Simplified accordingly.

2018-06-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Ditch gamma ramp.

	* src/ftstring.c (status): `gamma_ramp' removed.
	(gamma_ramp_draw): Remove.
	(event_gamma_change): Remove setting `gamma_ramp'.

	* src/ftstring.1: Mention stress test glyphs.

2018-06-28  Alexei Podtelezhnikov  <apodtele@gmail.com>
