@@ -45,6 +45,12 @@ call
 without an argument to get the actual list.
 .
 .TP
+.BI "\-f " face_index
+To access member font
+.IR face_index
+(default zero) in TTCs.
+.
+.TP
 .B \-v
 Show version.
 .
